Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-07-28 (SVN):
    * portals/damage.hc (T_Damage): make sure target is a player before
      checking its camera_time and return: spider.spiderActiveCount and
      player.camera_time overlap in entity union and can make spiders
      invincible, otherwise. issue has been there since Raven's v1.12.

2013-07-28 (SVN):
    * hc/siege/progs.src: removed again raven, snake, spider, scorpion,
      skullwiz, medusa, archer, hydra, faspell, fablade and fangel hc
      files from build. (they were added to build along with KS's siege
      changes back in 2005 at r247, but they aren't really used, and
      they weren't in siege-v0.15 release build either...)
    * hc/siege/client.hc (PlayerTouch): fix misplaced braces to match
      original siege-0.15 code better. (actually doesn't matter much,
      because deathmatch will always be set in hexenworld.)

2013-07-27 (SVN):
    * snd_mp3.c (mp3_startread): set the missing stream->info.bits value
      (for completeness only.)

2013-07-27 (SVN):
    * incremented uhexen2 version to 1.5.7 and date-stamp to 2013-07-27,
      incremented gamecode version to 1.29, incremented the game engine
      versions for hexen2 to 1.29 and hexenworld to 0.29.

2013-07-26 (SVN):
    * combat.hc (FireMelee): broke the long if condition for assassin's
      backstab in to smaller three nested ifs ordered in the likelihood
      of truth. in the siege version, changed some of the if conditions
      into else if (the player class checks.)

2013-07-26 (SVN):
    * ravenstf.hc (create_raven_shot2, hw and siege versions): removed
      the DAMAGE_YES assignment to missile.solid, just like we did for
      the h2 and portals versions years ago. (it should have been there
      by mistake or a left over as was noticed by Pa3PyX, which used to
      cause the missiles to be of SOLID_TRIGGER type and collide with
      each other.)